# drafts3

./: .gitignore
yazik/: WORKSPACE
yazik/bazel_rules/: cargo.bzl
yazik/scripts/: BUILD  cargo_proxy.sh
yazik/yazik/: Cargo.toml
yazik/yazik-cli/: BUILD  Cargo.toml
yazik/yazik-cli/src/: main.rs
yazik/yazik/src/: main.rs
yazik/yazik/src/common/: fields.rs  mod.rs  parser.rs  spec.rs
yazik/yazik/src/generator/: gen.rs  mod.rs  out.rs  out_file_builder.rs  pattern_repo.rs  spec_repo.rs
yazik/yazik/src/scheme/: mod.rs  parser.pest  parser.rs  scheme.rs
yazik/yazik/src/writer/: mod.rs  parser.pest  parser.rs  scheme.rs
yazik/yazik/writers/: flatbuffers.yazikspec
