[package]
name = "yazik"
version = "0.1.0"
authors = ["Gleb Kolobkov <gleyba.k@gmail.com>"]
edition = "2018"
include = ["src/**/*", "Cargo.toml"]

[[bin]]
name = "test"
path = "src/main.rs"

[dependencies]
serde = "1.0.98"
serde_derive = "1.0.98"
serde-value = "0.6.0"
pest = "2.1.0"
pest_derive = "2.1.0"
guard = "0.5.0"
rust-crypto = "^0.2"
serde_yaml = "0.8"